--- a/Publications.htm
+++ b/Publications.htm
@@ -250,8 +250,7 @@ Partage de Risque et Assurance Informelle: Mod&egrave;les
 Th&eacute;oriques et Tests Empiriques</a>", <i><b>L'Actualit&eacute;
 Economique, Revue d'Analyse Economique</b></i>,
 Vol. 78, n&deg; 1, 115-149, Mars 2002</li>
-  <li><span style="line-height: 150%;">"</span><a
- href="http://www-gremaq.univ-tlse1.fr/perso/dubois/revuerev.pdf"
+  <li><span style="line-height: 150%;">"</span><a href="revuerev.pdf"
  target="_blank">Contrats
 Agricoles
 en &Eacute;conomie du D&eacute;veloppement: Une Revue Critique
