--- a/other.htm
+++ b/other.htm
@@ -250,16 +250,6 @@ Toulouse from 2001 to 2007. Program: <a
 :</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - Economics of Antitrust and Consumer
-Protection, CREST, Paris<strong
- style="color: rgb(153, 0, 0); font-family: &quot;Open Sans&quot;; font-size: large; font-style: normal; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; background-color: rgb(255, 255, 255); font-weight: normal;"></strong>,
-September 14-15, 2017</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
-&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; - Tilburg University, September 19,
-2017</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - Penn State University, November 13, 2017
 &nbsp;</p>
 <p
@@ -272,7 +262,25 @@ September 14-15, 2017</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - Columbia University, November 21, 2017</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - Keynote, 10th PhD Workshop in Economics
+(University of Turin and Colegio Carlo Alberto)</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - Nutrition and Competition Conference, Oslo,
+March 13, 2018</p>
 Past :
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
+&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; - Tilburg University, September 19,
+2017</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - Economics of Antitrust and Consumer
+Protection, CREST, Paris<strong
+ style="color: rgb(153, 0, 0); font-family: &quot;Open Sans&quot;; font-size: large; font-style: normal; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; background-color: rgb(255, 255, 255); font-weight: normal;"></strong>,
+September 14-15, 2017</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Cowles Structural Microeconomics <span
