--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -123,6 +123,10 @@ Tun&ccedil;el</span></li>
 Trade on
 Manufacturers and Retailers Profits in the Pharmaceutical Sector" with
 Morten Saethre</span></li>
+  <li><span style="" lang="EN-GB">"Individual Preference Heterogeneity,
+Targeting and Welfare Effects of Soda Taxes" with Rachel Griffith and
+Martin O'Connell<br>
+    </span></li>
 </ul>
 <span style="font-weight: bold; font-family: Cambria;"><span
  style="font-weight: bold;"></span></span>
