--- a/other.htm
+++ b/other.htm
@@ -264,7 +264,7 @@ Toulouse from 2001 to 2007. Program: <a
 &nbsp;&nbsp;&nbsp; &nbsp; - Columbia University, November 21, 2017</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - PSL/Governance Analyitics seminar, Paris
+&nbsp;&nbsp;&nbsp; &nbsp; - PSL/Governance Analytics seminar, Paris
 Dauphine,&nbsp;December 12, 2017</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
@@ -424,7 +424,7 @@ Paris, March 25, 2016
 in vertical chains" TSE March 16-17, 2016</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - TSE IO seminar, Saint Lary January 28, 2016</p>
+&nbsp;&nbsp;&nbsp; &nbsp; - TSE IO seminar, Saint Lary, January 28, 2016</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
 &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;- University of Warwick, December
@@ -713,7 +713,7 @@ Conditional Cash Transfers: Reducing Present and Future Poverty, World
 Bank - IFS conference, Londres, May 26, 2009</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; margin-left: 40px; font-family: Cambria;">-
-Journ&eacute;e Politique Nutritionelle et R&eacute;gulation,
+Journ&eacute;e Politique Nutritionnelle et R&eacute;gulation,
 INRA, Paris, May 25, 2009</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; margin-left: 40px; font-family: Cambria;">-
@@ -1013,7 +1013,8 @@ defended on December 9, 2014, first
 placement: post doc University of Sussex</li>
   <li><a href="http://www.lauralasio.com/">Laura
 Lasio</a>, Essays in Empirical
-Insdutrial Orgnization and Regulation of Pharmaceuticals,&nbsp;defended
+Industrial Organization and Regulation of
+Pharmaceuticals,&nbsp;defended
 on December 7 2015, first
 placement: Assistant Professor McGill University, Montr&eacute;al.</li>
   <li><a target="_blank"
@@ -1038,7 +1039,7 @@ Professor, HEC Montr&eacute;al</li>
 Torchiana</a>, Essays in Applied Econometrics with Missing
 Data,&nbsp;defended on October 9, 2017, now Data Scientist, San
 Francisco, US</li>
-  <li>Rossi Abi-Rafeh, Emprirical IO in Digital Economy</li>
+  <li>Rossi Abi-Rafeh, Empirical IO in Digital Economy</li>
   <li>Malgorzata Majewska, IO and Health</li>
 </ul>
 <hr>
