--- a/contact.htm
+++ b/contact.htm
@@ -94,7 +94,7 @@ Economics,&nbsp;&nbsp;Agricultural Economics</p>
 <span style="font-family: Cambria;">&nbsp;</span><font
  style="font-family: Cambria;"><a href="cv_web.pdf" target="_blank">Complete
 CV</a><br>
-&nbsp;<a href="http://www.tse-fr.eu/fr/people/pierre-dubois"
+&nbsp;<a href="http://www.tse-fr.eu/people/pierre-dubois"
  target="_blank">TSE web page<br>
 </a>&nbsp;<a
  href="http://scholar.google.fr/citations?user=6Eo7zF0AAAAJ&amp;hl=fr"
