--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -87,6 +87,11 @@ Pharmaceutical
 Innovation on Cancer Mortality Rates</span></a>",
 with Margaret
 Kyle</li>
+  <li><span style="" lang="EN-GB">"<a
+ href="DuboisGriffithOConnell_sodatax.pdf" target="_blank">How Well
+Targeted Soda Taxes?</a>" with Rachel Griffith and
+Martin O'Connell<br>
+    </span></li>
   <li>"Incentives
 and
 Discrimination in Agricultural
@@ -123,10 +128,6 @@ Tun&ccedil;el</span></li>
 Trade on
 Manufacturers and Retailers Profits in the Pharmaceutical Sector" with
 Morten Saethre</span></li>
-  <li><span style="" lang="EN-GB">"Individual Preference Heterogeneity,
-Targeting and Welfare Effects of Soda Taxes" with Rachel Griffith and
-Martin O'Connell<br>
-    </span></li>
 </ul>
 <span style="font-weight: bold; font-family: Cambria;"><span
  style="font-weight: bold;"></span></span>
