--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -89,7 +89,7 @@ with Margaret
 Kyle</li>
   <li><span style="" lang="EN-GB">"<a
  href="DuboisGriffithOConnell_sodatax.pdf" target="_blank">How Well
-Targeted Soda Taxes?</a>" with Rachel Griffith and
+Targeted are Soda Taxes?</a>" with Rachel Griffith and
 Martin O'Connell<br>
     </span></li>
   <li>"Incentives
