--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -36,6 +36,17 @@ Unobserved Price Constraints: Structural Estimation on Pharmaceuticals</a></span
 revise and resubmit
 at <span style="font-style: italic;">American
 Economic Review</span></li>
+  <li><span style="" lang="EN-GB">"<a
+ href="DuboisGriffithOConnell_sodatax.pdf" target="_blank">How Well
+Targeted are Soda Taxes?</a>" with Rachel Griffith and
+Martin O'Connell<br>
+    </span></li>
+  <li><span style="" lang="EN-GB">"<a href="parallel.pdf"
+ target="_blank">On the Role of Parallel
+Trade on
+Manufacturers and Retailers Profits in the Pharmaceutical Sector</a>"
+with
+Morten Saethre</span></li>
   <li><span style="" lang="EN-GB">"<a href="dubois_jodar.pdf"
  target="_blank">Price
 and Brand Competition between Differentiated Retailers: A Structural
@@ -87,11 +98,6 @@ Pharmaceutical
 Innovation on Cancer Mortality Rates</span></a>",
 with Margaret
 Kyle</li>
-  <li><span style="" lang="EN-GB">"<a
- href="DuboisGriffithOConnell_sodatax.pdf" target="_blank">How Well
-Targeted are Soda Taxes?</a>" with Rachel Griffith and
-Martin O'Connell<br>
-    </span></li>
   <li>"Incentives
 and
 Discrimination in Agricultural
@@ -124,10 +130,6 @@ of
 Scientific Information and Recommendations on Physicians Prescribing
 Behavior" </span><span style="" lang="EN-GB">with Tuba
 Tun&ccedil;el</span></li>
-  <li><span style="" lang="EN-GB">"On the Role of Parallel
-Trade on
-Manufacturers and Retailers Profits in the Pharmaceutical Sector" with
-Morten Saethre</span></li>
 </ul>
 <span style="font-weight: bold; font-family: Cambria;"><span
  style="font-weight: bold;"></span></span>
