--- a/other.htm
+++ b/other.htm
@@ -1039,7 +1039,8 @@ Professor, HEC Montr&eacute;al</li>
   <li><a
  href="mailto:Adrian%20Torchiana%20%28adrian.torchiana@gmail.com%29">Adrian
 Torchiana</a>, Essays in Applied Econometrics with Missing
-Data,&nbsp;defended on October 9, 2017, now Data Scientist, San
+Data,&nbsp;defended on October 9, 2017, now Data Scientist, Granular,
+San
 Francisco, US</li>
   <li>Rossi Abi-Rafeh, Empirical IO in Digital Economy</li>
   <li>Malgorzata Majewska, IO and Health</li>
