--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -53,14 +53,8 @@ and Brand Competition between Differentiated Retailers: A Structural
 Econometric Model</a>", with Sandra
 Jodar</span>,
 revise and resubmit at <span style="font-style: italic;">Quantitative
-Economics</span><span style="" lang="EN-GB"></span></li>
-  <li> <span style=""><span class="style1style2style9" lang="EN-GB">&ldquo;</span><span
- lang="EN-US"><a href="Academic-Journals_031106.pdf" target="_blank">Academic
-Journals as Two-Sided Platforms:
-Empirical Evidence from Data on French Libraries</a>&rdquo;,
-with
-Adriana Hernandez-Perez and Marc Ivaldi</span></span><span style=""
- lang="EN-US"></span> </li>
+Economics</span><span style=""><span lang="EN-US"></span></span><span
+ style="" lang="EN-US"></span> </li>
   <li><span lang="EN-US">"<a href="BDmay2015.pdf" target="_blank">Identifying
 Two Part Tariff Contracts with Buyer Power: Empirical Estimation on
 Food Retailing</a>", </span><span lang="EN-US">with
@@ -105,12 +99,7 @@ Contracts: Identification and Structural Estimation on French
 Data&rdquo; with Pascal Lavergne</li>
   <li>"Habit Formation and
 Nutrition: Evidence from Consumer Migration"
-with Aviv Nevo and Rachel Griffith</li>
-  <li>"Discrete/Continuous Choice
-Demand with Heterogeneity: Estimating
-the Impacts of a Food&nbsp;Information Campaign" with&nbsp;
-Rachel
-Griffith, Arthur Lewbel and Martin O'Connell</li>
+with&nbsp;Rachel Griffith and&nbsp;Aviv Nevo</li>
   <li>"Consumer Demand with
 Unobserved Stockpiling and Intertemporal
 Price Discrimination" with Thierry Magnac </li>
@@ -130,8 +119,15 @@ of
 Scientific Information and Recommendations on Physicians Prescribing
 Behavior" </span><span style="" lang="EN-GB">with Tuba
 Tun&ccedil;el</span></li>
+  <li> <span style=""><span class="style1style2style9" lang="EN-GB">&ldquo;</span><span
+ lang="EN-US"><a href="Academic-Journals_031106.pdf" target="_blank">Academic
+Journals as Two-Sided Platforms:
+Empirical Evidence from Data on French Libraries</a>&rdquo;,
+with
+Adriana Hernandez-Perez and Marc Ivaldi</span></span></li>
 </ul>
-<span style="font-weight: bold; font-family: Cambria;"><span
+<i><span style="font-weight: bold;"></span><br>
+</i><span style="font-weight: bold; font-family: Cambria;"><span
  style="font-weight: bold;"></span></span>
 </body>
 </html>
