--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -41,10 +41,11 @@ Economic Review</span></li>
 Targeted are Soda Taxes?</a>" with Rachel Griffith and
 Martin O'Connell<br>
     </span></li>
-  <li><span style="" lang="EN-GB">"<a href="parallel.pdf"
- target="_blank">On the Role of Parallel
+  <li><span style="" lang="EN-GB">"<a
+ href="DuboisSaethreParallelTrade.pdf" target="_blank">On the Effect of
+Parallel
 Trade on
-Manufacturers and Retailers Profits in the Pharmaceutical Sector</a>"
+Manufacturers' and Retailers' Profits in the Pharmaceutical Sector</a>"
 with
 Morten Saethre</span></li>
   <li><span style="" lang="EN-GB">"<a href="dubois_jodar.pdf"
