--- a/contact.htm
+++ b/contact.htm
@@ -98,6 +98,8 @@ CV</a><br>
  target="_blank">TSE web page<br>
 </a>&nbsp;<a
  href="http://scholar.google.fr/citations?user=6Eo7zF0AAAAJ&amp;hl=fr"
- target="_blank">Google Scholar Page</a></font>
+ target="_blank">Google Scholar Page</a><br>
+&nbsp;<a href="https://voxeu.org/users/pierredubois0" target="_blank">Vox
+EU page</a></font>
 </body>
 </html>
