--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -93,17 +93,26 @@ Pharmaceutical
 Innovation on Cancer Mortality Rates</span></a>",
 with Margaret
 Kyle</li>
-  <li>"Incentives
-and
-Discrimination in Agricultural
-Contracts: Identification and Structural Estimation on French
-Data&rdquo; with Pascal Lavergne</li>
+  <li> <span style=""><span class="style1style2style9" lang="EN-GB">&ldquo;</span><span
+ lang="EN-US"><a href="Academic-Journals_031106.pdf" target="_blank">Academic
+Journals as Two-Sided Platforms:
+Empirical Evidence from Data on French Libraries</a>&rdquo;,
+with
+Adriana Hernandez-Perez and Marc Ivaldi</span></span></li>
+</ul>
+<span style="font-weight: bold;">Work in progress:</span>
+<ul style="font-family: Cambria;">
   <li>"Habit Formation and
 Nutrition: Evidence from Consumer Migration"
 with&nbsp;Rachel Griffith and&nbsp;Aviv Nevo</li>
   <li>"Consumer Demand with
 Unobserved Stockpiling and Intertemporal
 Price Discrimination" with Thierry Magnac </li>
+  <li><span style="" lang="EN-GB">"Identifying the Effects
+of
+Scientific Information and Recommendations on Physicians Prescribing
+Behavior" </span><span style="" lang="EN-GB">with Tuba
+Tun&ccedil;el</span></li>
   <li>"Intrahousehold
 Risk Sharing, Incentives and Nutrition:
 Evidence from the Philippines", with Ethan Ligon</li>
@@ -115,19 +124,13 @@ Val&eacute;rie Orozco</li>
   <li><span style="" lang="EN-GB">"Non
 Parametric Decomposition of the Distributional Change of Body Mass
 Index in China", with Ju Qiu</span></li>
-  <li><span style="" lang="EN-GB">"Identifying the Effects
-of
-Scientific Information and Recommendations on Physicians Prescribing
-Behavior" </span><span style="" lang="EN-GB">with Tuba
-Tun&ccedil;el</span></li>
-  <li> <span style=""><span class="style1style2style9" lang="EN-GB">&ldquo;</span><span
- lang="EN-US"><a href="Academic-Journals_031106.pdf" target="_blank">Academic
-Journals as Two-Sided Platforms:
-Empirical Evidence from Data on French Libraries</a>&rdquo;,
-with
-Adriana Hernandez-Perez and Marc Ivaldi</span></span></li>
+  <li>"Incentives
+and
+Discrimination in Agricultural
+Contracts: Identification and Structural Estimation on French
+Data&rdquo; with Pascal Lavergne</li>
 </ul>
-<i><span style="font-weight: bold;"></span><br>
+<i>
 </i><span style="font-weight: bold; font-family: Cambria;"><span
  style="font-weight: bold;"></span></span>
 </body>
