--- a/contact.htm
+++ b/contact.htm
@@ -99,7 +99,7 @@ CV</a><br>
 </a>&nbsp;<a
  href="http://scholar.google.fr/citations?user=6Eo7zF0AAAAJ&amp;hl=fr"
  target="_blank">Google Scholar Page</a><br>
-&nbsp;<a href="https://voxeu.org/users/pierredubois0" target="_blank">Vox
-EU page</a></font>
+&nbsp;<a href="https://voxeu.org/users/pierredubois0" target="_blank">CEPR
+Vox page</a></font>
 </body>
 </html>
