--- a/other.htm
+++ b/other.htm
@@ -254,7 +254,8 @@ Toulouse from 2001 to 2007. Program: <a
 2018</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - IO&nbsp;Conference, London, June
+&nbsp;&nbsp;&nbsp; &nbsp; - Empirical IO: Analysis of Contracting and
+Bargaining Conference, Cemmap, London, June
 15, 2018</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
@@ -262,10 +263,26 @@ Toulouse from 2001 to 2007. Program: <a
 June 19, 2018</p>
 &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp; - Shanghai University of Finance and
-Economics, IO Summer School Lecture, June 26, 2018
+Economics, IO Summer School Lecture, June 26, 2018<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- NBER Summer Institute,
+Industrial Organization, July 19-20, 2018
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - Bogota, Colombia, October 4, 2018</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- PUC Rio de Janeiro,&nbsp;April
+23, 2019</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- EPGE FGV, Rio de Janeiro, April
+25, 2019</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- INSPER, Sao Paulo,&nbsp;April
+30, 2019</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"></p>
 Past :
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
