--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -39,22 +39,35 @@ papers:</i></p>
 </i></p>
 
 <br>
+
 <ul style="font-family: Cambria;">
-
-  
-  <li><span style="" lang="EN-GB">"<a href="DuboisGriffithOConnell_sodatax.pdf" target="_blank">How Well
-Targeted are Soda Taxes?</a>" with Rachel Griffith and
-Martin O'Connell<br>
-
-    </span></li>
 
   <li><span style="" lang="EN-GB">"<a href="DuboisSaethreParallelTrade.pdf" target="_blank">On the Effect of
 Parallel
 Trade on
 Manufacturers' and Retailers' Profits in the Pharmaceutical Sector</a>"
 with
-Morten Saethre</span></li>
+Morten Saethre</span>,
+revise and resubmit at&nbsp;<span style="font-style: italic;">Econometrica</span></li>
+  <li><span style="" lang="EN-GB">"<a href="DuboisGriffithOConnell_sodatax.pdf" target="_blank">How Well
+Targeted are Soda Taxes?</a>" with Rachel Griffith and
+Martin O'Connell, </span>revise and resubmit at&nbsp;<span style="font-style: italic;">American
+Economic Review</span><span style="font-style: italic;"></span></li>
 
+  
+  <li><span style="" lang="EN-GB">"<a href="dp.pdf" target="_blank">Price
+Dispersion and Information Frictions: Evidence from Supermarket
+Purchases</a>", with Helena Perrone</span>,
+revise and resubmit
+at <span style="font-style: italic;">American
+Economic Journal, Microeconomics</span></li>
+  <li>"<a style="color: rgb(51, 0, 204);" href="DuboisKyle_Cancer.pdf" target="_blank"><span style="" lang="EN-US">Are
+Cancer Drugs Worth the Price? The
+Effects of
+Pharmaceutical
+Innovation on Cancer Mortality Rates</span></a>",
+with Margaret
+Kyle</li>
   <li><span style="" lang="EN-GB">"<a href="dubois_jodar.pdf" target="_blank">Price
 and Brand Competition between Differentiated Retailers: A Structural
 Econometric Model</a>", with Sandra
@@ -66,26 +79,18 @@ Economics</span><span style=""><span lang="EN-US"></span></span><span style="" l
 Two Part Tariff Contracts with Buyer Power: Empirical Estimation on
 Food Retailing</a>", </span><span lang="EN-US">with
 C&eacute;line Bonnet</span></li>
-
-  <li><span style="" lang="EN-GB">"<a href="dp.pdf" target="_blank">Price
-Dispersion and Information Frictions: Evidence from Supermarket
-Purchases</a>", with Helena Perrone</span>,
-revise and resubmit
-at <span style="font-style: italic;">American
-Economic Journal, Microeconomics</span></li>
-
-  <li> "<a href="hetpakdef.pdf" target="_blank">Consumption
+  <li>"<a href="nutrition_risk_sharing.pdf" target="_blank">Nutrition
+and Risk Sharing within the
+Household</a>", with Ethan
+Ligon</li>
+  <li>&nbsp;"<a href="hetpakdef.pdf" target="_blank">Consumption
 Insurance With Heterogeneous Preferences. Can Sharecropping Help
 Complete Markets?</a>",&nbsp;
 revise and
 resubmit at the <i>Journal of
 Political Economy</i> </li>
 
-  <li>"<a href="nutrition_risk_sharing.pdf" target="_blank">Nutrition
-and Risk Sharing within the
-Household</a>", with Ethan
-Ligon<span style="font-style: italic;"></span></li>
-
+  
   <li><span style="font-style: italic;"></span>"<a href="multi.pdf" target="_blank">Multitask
 Moral Hazard, Incentive Contracts and Land Value</a>",
 revise and resubmit at the <i>Annals
@@ -94,16 +99,7 @@ Statistics</i> </li>
 
   <li> "<a href="risk_het.pdf" target="_blank">Heterogeneity
 of Preferences, Limited Commitment and Coalitions: Empirical Evidence
-on the Limits to Risk Sharing in Rural Pakistan</a>" </li>
-
-  <li>"<a style="color: rgb(51, 0, 204);" href="DuboisKyle_Cancer.pdf" target="_blank"><span style="" lang="EN-US">Are
-Cancer Drugs Worth the Price? The
-Effects of
-Pharmaceutical
-Innovation on Cancer Mortality Rates</span></a>",
-with Margaret
-Kyle</li>
-
+on the Limits to Risk Sharing in Rural Pakistan</a>"</li>
   <li> <span style=""><span class="style1style2style9" lang="EN-GB">&ldquo;</span><span lang="EN-US"><a href="Academic-Journals_031106.pdf" target="_blank">Academic
 Journals as Two-Sided Platforms:
 Empirical Evidence from Data on French Libraries</a>&rdquo;,
