--- a/other.htm
+++ b/other.htm
@@ -248,8 +248,6 @@ Toulouse from 2001 to 2007. Program: <a
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- NBER Summer Institute,
-Industrial Organization, July 19-20, 2018
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - Bogota, Colombia, October 4, 2018</p>
@@ -273,6 +271,10 @@ Industrial Organization, July 19-20, 2018
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"></p>
 Past :
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;- NBER Summer Institute,
+Industrial Organization, July 19-20, 2018</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - Shanghai University of Finance and
@@ -1067,6 +1069,7 @@ San
 Francisco, US</li>
   <li>Rossi Abi-Rafeh, Empirical IO in Digital Economy</li>
   <li>Malgorzata Majewska, IO and Health</li>
+  <li>Gokce Gokkoca, IO and Health</li>
 </ul>
 <hr>
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt;"
