--- a/other.htm
+++ b/other.htm
@@ -249,8 +249,19 @@ Toulouse from 2001 to 2007. Program: <a
  name="Forthcoming">Forthcoming</a>
 :</p>
 <p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - Bogota, Colombia, October 4, 2018</p>
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
+&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;- Workshop of NBER IFS International
+Network on the Value of Health Research, Cambridge, September 15,
+2018&nbsp;</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">
+&nbsp; &nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - II Workshop on Structural Industrial
+Organization, Bogota, Colombia, October 4-5, 2018</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;- Workshop on Health Economics, CREST-ENSAI,
+Rennes, October 26, 2018 </p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;
 &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- University of Cambridge, January 30,
@@ -266,10 +277,16 @@ Toulouse from 2001 to 2007. Program: <a
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- INSPER, Sao Paulo,&nbsp;April
-30, 2019</p>
-<br>
+30, 2019
+</p>
 <p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"></p>
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; -&nbsp;Hong Kong University of Science and
+Technology, May 31, 2019
+</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - University of Hong Kong, June 3, 2019</p>
 Past :
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
