--- a/other.htm
+++ b/other.htm
@@ -36,8 +36,7 @@ since 2009</li>
   <li> Co-editor
 of <a href="http://www2.hec.ca/actualiteeconomique/" target="_blank">L'Actualit&eacute;
 Economique, Revue
-d'Analyse Economique</a>,&nbsp;2004-2013
-  </li>
+d'Analyse Economique</a>,&nbsp;2004-2013 </li>
   <li> Co-editor
 of a special issue of the <a
  href="http://www.blackwell-synergy.com/toc/jems/14/4" target="_blank">Journal
@@ -50,8 +49,7 @@ of a&nbsp;special issue of the <a
  href="http://www3.interscience.wiley.com/journal/4079/home"
  target="_blank">Journal
 of Applied Econometrics</a>, 2008,
-Volume 23, Issue 7,<i style="">
-    </i>on
+Volume 23, Issue 7,<i style=""> </i>on
 The Econometrics of Auctions,
 in
 Honor of Jean-Jacques Laffont.</li>
@@ -67,8 +65,7 @@ Honor of Jean-Jacques Laffont.</li>
  name="Organization">Organization of Seminars and
 Conferences</a></h3>
       </td>
-      <td valign="top" width="1">
-      </td>
+      <td valign="top" width="1"> </td>
     </tr>
   </tbody>
 </table>
@@ -120,8 +117,7 @@ Conference on <a target="_blank"
 Food Processing Industry"</a> in
 Toulouse, June, 10-11, 2010,
 with Catarina Goulao. <a href="program_inra_idei_conf_2010.pdf"
- target="_blank">Program</a>.
-    </p>
+ target="_blank">Program</a>. </p>
   </li>
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
@@ -160,8 +156,7 @@ October 20-21, 2009. <a href="healthprogram2009.pdf" target="_blank">Program</a>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
 with Bruno Jullien and Thierry Magnac of an international workshop on
 "Risk Sharing" at the University of Toulouse, June 5-6, 2008. <a
- href="w_risk_08.pdf" target="_blank">Program</a>.
-    </p>
+ href="w_risk_08.pdf" target="_blank">Program</a>. </p>
   </li>
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
@@ -170,15 +165,13 @@ of the Conference on "<a
  target="_blank">The
 Economics of the Health Care and the Pharmaceutical Industry</a>",
 IDEI Toulouse, January 25-26, 2008. <a href="program%20healthcare2008"
- target="_blank">Program</a>.
-    </p>
+ target="_blank">Program</a>. </p>
   </li>
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
 with Bruno Jullien and Thierry Magnac of an international workshop on
 "Risk Sharing" at the University of Toulouse, September 3-4, 2007. <a
- href="w_risk.pdf" target="_blank">Program</a>.
-    </p>
+ href="w_risk.pdf" target="_blank">Program</a>. </p>
   </li>
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
@@ -250,8 +243,8 @@ of the Econometrics Seminar of the University of
 Toulouse from 2001 to 2007. Program: <a
  href="program_seminar_econometrics_2001_2002.htm" target="_blank">
 2001-2002</a>, <a href="program_seminar_econometrics_2002_2003.htm"
- target="_blank"> 2002-2003</a>,
-    <a href="program_seminar_econometrics_2003_2004.htm" target="_blank">2003-2004</a>,
+ target="_blank"> 2002-2003</a>, <a
+ href="program_seminar_econometrics_2003_2004.htm" target="_blank">2003-2004</a>,
     <a href="program_seminar_econometrics_2004_2005.htm" target="_blank">2004-2005</a>,
     <a href="program_seminar_econometrics_2005_2006.htm" target="_blank">2005-2006</a>,
     <a href="program_seminar_econometrics_2006_2007.htm" target="_blank">2006-2007</a></p>
@@ -268,18 +261,10 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
-&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;- Workshop of NBER
-IFS International
-Network on the Value of Health Research, Cambridge, September 15,
-2018&nbsp;</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">
 &nbsp; &nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - II Workshop on Structural
 Industrial
-Organization, Bogota, Colombia, October 4-5, 2018</p>
+Organization, Bogota, Colombia, October 4-5, 2018
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;- Workshop on Health
@@ -317,6 +302,12 @@ Technology, May 31, 2019
 &nbsp;&nbsp;&nbsp; &nbsp; - University of Hong Kong,
 June 3, 2019</p>
 Past :
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
+&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;- Workshop of NBER
+IFS International
+Network on the Value of Health Research, Cambridge, September 15,
+2018&nbsp;</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;- NBER Summer Institute,
