--- a/Publications.htm
+++ b/Publications.htm
@@ -42,9 +42,10 @@ publications:</i></p>
  target="_blank">Identifying
 Industry
 Margins with Price Constraints: Structural Estimation on Pharmaceuticals</a></span><span
- style="" lang="EN-GB">" with Laura Lasio</span>, forthcoming
-at <span style="font-style: italic; font-weight: bold;">American
-Economic Review</span></li>
+ style="" lang="EN-GB">" with Laura Lasio</span>,&nbsp; <span
+ style="font-style: italic; font-weight: bold;">American
+Economic Review</span><span style="font-weight: bold;"></span>, 108,
+12&nbsp;</li>
   <li> "<a href="https://doi.org/10.1093/restud/rdx025" target="_blank">The
 Effects of
 Banning
