--- a/contact.htm
+++ b/contact.htm
@@ -25,30 +25,19 @@
  style="font-family: Cambria;">&nbsp;</span></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"><br>
-&nbsp;Professor of Economics,<span style="text-decoration: underline;">
-</span><a target="_blank" href="http://tse-fr.eu/">Toulouse
-School of Economics</a></p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;<a
- target="_blank" href="http://www.ut-capitole.fr/">University
+&nbsp;Professor of Economics,&nbsp; <a target="_blank"
+ href="http://tse-fr.eu/">Toulouse
+School of Economics</a>,&nbsp;<a target="_blank"
+ href="http://www.ut-capitole.fr/">University
 of Toulouse
-1 Capitole</a></p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;<a
- href="http://www.iufrance.fr/les-membres-de-liuf/membre/1140-pierre-dubois.html"
- target="_blank">Institut
-Universitaire de France</a> Junior
-Member</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;<a
- href="http://www.idei.fr/" target="_blank">IDEI</a>
-Researcher</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"><font
- style="font-family: Cambria;">&nbsp;</font><a
+1 Capitole</a><br>
+&nbsp;Scientific
+Director of the Toulouse School of Economics
+<a target="_blank" href="http://www.ut-capitole.fr/"></a></p>
+<font style="font-family: Cambria;">&nbsp;</font><a
  style="font-family: Cambria;"
  href="http://www.ifs.org.uk/people/profile/377" target="_blank">IFS
-Research Fellow</a></p>
+Research Fellow</a>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;<a
  href="http://www.cepr.org/" target="_blank">CEPR</a>
@@ -57,8 +46,18 @@ Research Fellow</p>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;<a
  href="http://www.eudn.eu/" target="_blank">EUDN</a>
 Member</p>
-<span style="font-family: Cambria;">
-&nbsp;Managing Editor of&nbsp;</span><a style="font-family: Cambria;"
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;<a
+ href="http://www.iufrance.fr/les-membres-de-liuf/membre/1140-pierre-dubois.html"
+ target="_blank">Institut
+Universitaire de France</a> Junior
+Member</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;Fellow
+of the <a href="https://appliedeconometrics.org/" target="_blank">International
+Association of Applied Econometrics</a></p>
+<span style="font-family: Cambria;">&nbsp;Managing Editor of&nbsp;</span><a
+ style="font-family: Cambria;"
  href="http://www.journals.elsevier.com/international-journal-of-industrial-organization/"
  target="_blank">International Journal of Industrial
 Organization</a><span style="font-family: Cambria;">
@@ -69,11 +68,6 @@ Organization</a><span style="font-family: Cambria;">
 </span><span style="font-family: Cambria;">&nbsp;Associate Editor of <a
  href="https://annals.ensae.fr/" target="_blank">Annals of Economics
 and Statisctics</a></span><br>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;Scientific
-Director of the Toulouse School of Economics</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"></p>
 &nbsp;E-mail:&nbsp;<a href="mailto:pierre.dubois@tse-fr.eu">pierre.dubois@tse-fr.eu</a>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;</p>
@@ -88,9 +82,9 @@ Director of the Toulouse School of Economics</p>
 Organization,&nbsp;&nbsp;Development Economics</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;Health
-Economics,&nbsp;&nbsp;Agricultural Economics</p>
+Economics</p>
 <p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"></p>
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;</p>
 <span style="font-family: Cambria;">&nbsp;</span><font
  style="font-family: Cambria;"><a href="cv_web.pdf" target="_blank">Complete
 CV</a><br>
