--- a/other.htm
+++ b/other.htm
@@ -21,8 +21,7 @@ service:</b>
   <li>Managing Editor of <a
  href="http://www.journals.elsevier.com/international-journal-of-industrial-organization/"
  target="_blank">International Journal of Industrial
-Organization</a>,
-since 2013</li>
+Organization</a>,&nbsp;2013-2018</li>
   <li>Associate
 Editor of <a
  href="http://www.journals.elsevier.com/european-economic-review/"
@@ -261,15 +260,6 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-&nbsp; &nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - II Workshop on Structural
-Industrial
-Organization, Bogota, Colombia, October 4-5, 2018
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;- Workshop on Health
-Economics, CREST-ENSAI,
-Rennes, October 26, 2018 </p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;
 &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- University of
@@ -277,6 +267,9 @@ Cambridge, January 30,
 2019</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - Ofcom, London, 2019 </p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- PUC Rio de
 Janeiro,&nbsp;April
 23, 2019</p>
@@ -303,7 +296,19 @@ Technology, May 31, 2019
 June 3, 2019</p>
 Past :
 <p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;- Workshop on Health
+Economics, CREST-ENSAI,
+Rennes, October 26, 2018&nbsp;</p>
+<p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
+&nbsp;
+&nbsp;&nbsp; &nbsp; - II Workshop on Structural
+Industrial
+Organization, Bogota, Colombia, October 4-5, 2018</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">
+&nbsp;
 &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;- Workshop of NBER
 IFS International
 Network on the Value of Health Research, Cambridge, September 15,
@@ -1141,7 +1146,7 @@ Pharmaceuticals,&nbsp;defended
 on December 7 2015, first
 placement: Assistant Professor McGill University, Montr&eacute;al.</li>
   <li><a target="_blank"
- href="https://sites.google.com/site/jorgeflorezacosta/home">Jorge
+ href="http://www.urosario.edu.co/Profesores/Listado-de-profesores/F/Jorge-Florez-Acosta/">Jorge
 Florez</a>, Empirical
 IO of the Food Retailing Industry, (with
 B. Jullien),&nbsp;defended on July 21 2015, first
