--- a/Publications.htm
+++ b/Publications.htm
@@ -38,7 +38,8 @@ publications:</i></p>
 <span style="" lang="EN-GB">
 </span><br>
 <ol>
-  <li><span style="" lang="EN-GB">"<a href="duboislasio.pdf"
+  <li><span style="" lang="EN-GB">"<a
+ href="https://www.aeaweb.org/articles?id=10.1257/aer.20140202"
  target="_blank">Identifying
 Industry
 Margins with Price Constraints: Structural Estimation on Pharmaceuticals</a></span><span
