--- a/contact.htm
+++ b/contact.htm
@@ -54,7 +54,8 @@ Universitaire de France</a> Junior
 Member</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;Fellow
-of the <a href="https://appliedeconometrics.org/" target="_blank">International
+of the <a href="https://appliedeconometrics.org/about/fellows"
+ target="_blank">International
 Association of Applied Econometrics</a></p>
 <span style="font-family: Cambria;">&nbsp;Managing Editor of&nbsp;</span><a
  style="font-family: Cambria;"
