--- a/contact.htm
+++ b/contact.htm
@@ -51,7 +51,7 @@ Member</p>
  href="http://www.iufrance.fr/les-membres-de-liuf/membre/1140-pierre-dubois.html"
  target="_blank">Institut
 Universitaire de France</a> Junior
-Member</p>
+Member (2011-2015)</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;Fellow
 of the <a href="https://appliedeconometrics.org/about/fellows"
@@ -62,13 +62,13 @@ Association of Applied Econometrics</a></p>
  href="http://www.journals.elsevier.com/international-journal-of-industrial-organization/"
  target="_blank">International Journal of Industrial
 Organization</a><span style="font-family: Cambria;">
-<br>
+(2013-2018)<br>
 </span><span style="font-family: Cambria;">&nbsp;Associate Editor of <a
  href="https://www.journals.elsevier.com/european-economic-review"
- target="_blank">European Economic Review</a><br>
+ target="_blank">European Economic Review</a> (2012-)<br>
 </span><span style="font-family: Cambria;">&nbsp;Associate Editor of <a
  href="https://annals.ensae.fr/" target="_blank">Annals of Economics
-and Statisctics</a></span><br>
+and Statisctics</a></span> (2009-)<br>
 &nbsp;E-mail:&nbsp;<a href="mailto:pierre.dubois@tse-fr.eu">pierre.dubois@tse-fr.eu</a>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;</p>
