--- a/other.htm
+++ b/other.htm
@@ -280,6 +280,11 @@ Sao Paulo,&nbsp;April
 30, 2019
 </p>
 <p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- Bates-White Life Sciences
+Symposium, Washington DC, May 20-21, 2019
+</p>
+<p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; -&nbsp;Hong Kong
 University of Science and
@@ -292,7 +297,11 @@ June 3, 2019</p>
 Past :
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
-&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- University of
+&nbsp; &nbsp;&nbsp; - TSE IO Winter workshop, Ax les thermes, February
+8, 2019</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
+&nbsp; &nbsp;&nbsp; - University of
 Cambridge, Judge Business School, January 30,
 2019</p>
 <p
@@ -384,7 +393,7 @@ Yale University,
 June 8-9, 2017&nbsp;&nbsp;</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- 2017 Bates White
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;-&nbsp;Bates White
 Life Sciences
 Symposium, Washington DC, May 22-23, 2017&nbsp;
 &nbsp;&nbsp;&nbsp;</p>
