--- a/other.htm
+++ b/other.htm
@@ -265,7 +265,7 @@ Conferences</a></h3>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - Ofcom, London, 2019 </p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- PUC Rio de
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;- PUC Rio de
 Janeiro,&nbsp;April
 24, 2019</p>
 <p
@@ -294,6 +294,14 @@ Technology, May 31, 2019
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - University of Hong Kong,
 June 3, 2019</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - CEPR Applied IO, June 14-16, 2019, Madrid</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - Annual Conference of &nbsp;the
+International Association of Applied Econometrics, June 25-28, 2019,
+Nicosia, Cyprus</p>
 Past :
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
