--- a/other.htm
+++ b/other.htm
@@ -33,7 +33,8 @@ Editor of <a href="http://annales.ensae.fr/" target="_blank">Annals
 of Economics and Statistics</a>,
 since 2009</li>
   <li> Co-editor
-of <a href="http://www2.hec.ca/actualiteeconomique/" target="_blank">L'Actualit&eacute;
+of <a href="http://expertise.hec.ca/actualiteeconomique/"
+ target="_blank">L'Actualit&eacute;
 Economique, Revue
 d'Analyse Economique</a>,&nbsp;2004-2013 </li>
   <li> Co-editor
