--- a/contact.htm
+++ b/contact.htm
@@ -82,15 +82,21 @@ Organization,&nbsp;&nbsp;Development Economics</p>
 Economics</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;</p>
-<span style="font-family: Cambria;">&nbsp;</span><font
- style="font-family: Cambria;"><a href="cv_web.pdf" target="_blank">Complete
-CV</a><br>
-&nbsp;<a href="http://www.tse-fr.eu/people/pierre-dubois"
- target="_blank">TSE web page<br>
-</a>&nbsp;<a
- href="http://scholar.google.fr/citations?user=6Eo7zF0AAAAJ&amp;hl=fr"
- target="_blank">Google Scholar Page</a><br>
-&nbsp;<a href="https://voxeu.org/users/pierredubois0" target="_blank">CEPR
-Vox page</a></font>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"></p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">Addres:
+Toulouse School of Economics</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">21
+all&eacute;e de Brienne</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">31000
+Toulouse</p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">France</p>
+<font style="font-family: Cambria;"><a
+ href="https://voxeu.org/users/pierredubois0" target="_blank"><br>
+</a></font>
 </body>
 </html>
